<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contenedorDePresentacion"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/botonComenzar">

        <ImageView
            android:id="@+id/imageTitulo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contenedorDeTitulo"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textoAndroid"
                android:text="@string/android"
                android:textSize="40sp"
                android:textStyle="normal"
                android:layout_marginEnd="5dp"
                android:textColor="@color/green_android"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textoTrivia"
                android:text="@string/trivia"
                android:textSize="40sp"
                android:layout_marginStart="5dp"
                android:textStyle="normal"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonComenzar"
        android:text="@string/play"
        android:textSize="30sp"
        android:textColor="@color/purple_500"
        android:backgroundTint="@color/gray"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedorDePresentacion"/>

</androidx.constraintlayout.widget.ConstraintLayout>